fixed the spacing around the buttons on the landing page and changed the subtext under my name

--- a/css/contact.css
+++ b/css/contact.css
@@ -52,9 +52,14 @@
 
 */
 
+body{
+  padding: 20px;
+}
+
 .container{
-  min-height: 70vh; 
+ height: 50%; 
   overflow: hidden;
+  
 
 }
 
@@ -121,17 +126,4 @@ i{
 
 
 /* Footer */
-.footer{
-  background-color: #000;
-}
-
-.footer p{
-  color: #fff;
-  text-align: center;
-  padding: 25px;
-  font-size: 1.2em;
-  bottom: 0;
-  width: 100vw;
-}
-
 
