--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ a:visited{
   font-size: 25px;
   padding: 15px;
   border-radius: 25px;
+  margin: 40px 30px;
 }
 
 
@@ -61,6 +62,7 @@ a:visited{
   font-size: 25px;
   padding: 15px;
   border-radius: 25px;
+  margin: 40px 30px;
 }
 
 .btn3{
@@ -68,6 +70,7 @@ a:visited{
   font-size: 25px;
   padding: 15px;
   border-radius: 25px;
+  margin: 40px 30px;
 }
 
 /* Drops Opacity of Button when you hover over it*/
@@ -87,10 +90,12 @@ a:visited{
 /* Flexbox For Buttons*/
 .buttons{
 
-  margin-top: 40px;
+
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
+
+
   
   
 }
